# metatool

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  pytest.yml
src/metatool_anbagu/wrap/decorators/: validator.py
src/metatool_anbagu/wrap/meta/: meta.py
src/wrap/: stack.py
src/wrap/collections/: validator.py
src/wrap/decorators/: logger.py
src/wrap/meta/: meta.py
tests/test/wrap/test_meta/: test_meta.py
tests/test_wrap/: test_stack.py
