[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metatool_anbagu"
version = "0.0.2"
authors = [
  { name="Antoni Bayo Guardiola", email="bayocostur@gmail.com" },
]
description = "Tool for metaprogramming empowering"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements.txt"] }}

[project.urls]
Homepage = "https://github.com/anbagu/metatool"
Issues = "https://github.com/anbagu/metatool/issues"